RESOLVED FIXED293920
Determining that a character is Arabic may be wrong
https://bugs.webkit.org/show_bug.cgi?id=293920
Summary Determining that a character is Arabic may be wrong
Ian Gower
Reported 2025-06-02 13:54:09 PDT
Uploading bug for past Radar: rdar://6677040 * SUMMARY In UnicodeIcu.h, this function: inline bool isArabicChar(UChar32 c) { return ublock_getCode(c) == UBLOCK_ARABIC; } maybe should be using this: uscript_getScript(c, &err) == USCRIPT_ARABIC && U_SUCCESS(err) instead. Not every Arabic character is in the Arabic block any more, due to extensions to Unicode. If this test is only used for compatibility shaping, then it's probably OK, as that only applies to older Arabic characters. ***Apply modification to current code located in WTF/Source/wtf/URLHelpers:
Attachments
Ian Gower
Comment 1 2025-06-02 13:55:22 PDT
Ian Gower
Comment 2 2025-06-02 13:56:20 PDT
EWS
Comment 3 2025-06-05 15:22:09 PDT
Committed 295893@main (2cafff28b06f): <https://commits.webkit.org/295893@main> Reviewed commits have been landed. Closing PR #46221 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.