Determining that a character is Arabic may be wrong https://bugs.webkit.org/show_bug.cgi?id=293920 rdar://6677040

Reviewed by Alexey Proskuryakov and Brent Fulgham.

Updated check for Arabic in Arabic block to check against U_SCRIPT_ARABIC, with error handling. Added test cases that demonstrate improved behavior.

* Source/WTF/wtf/URLHelpers.cpp:
(WTF::URLHelpers::isLookalikeSequence<USCRIPT_ARABIC>):
* Tools/TestWebKitAPI/Tests/WTF/cocoa/URLExtras.mm:
(TestWebKitAPI::TEST(URLExtras, URLExtras_NotSpoofed)):

Canonical link: https://commits.webkit.org/295893@main